# zuul-haskell

./: .gitreview  .zuul.yaml  CHANGELOG.md  Containerfile  Makefile  README.md  groups  project.config  zuul.cabal
app/: Main.hs
src/: Zuul.hs
src/Zuul/: Aeson.hs  Job.hs  JobConfig.hs  Nodeset.hs  Project.hs  ProjectConfig.hs  SourceContext.hs  Status.hs  Tenant.hs
test/: Spec.hs
test/data/: Job.json  Jobs.json  Project.json  Projects.json  Status.json  Tenants.json
